# Dayio-to-Obsidian-Daily-Notes

./: .gitignore  README.md  main.py  migrater.py  migration_constants.py  pyproject.toml
daylio_exports/: sample_daylio.csv
tests/: test_migrater.py  test_migration_entry.py
