[tool.poetry]
name = "daylio-migration"
version = "0.1.0"
description = ""
authors = ["Farhan Sareshwala <p.git@fsaresh.com>"]
readme = "README.md"
packages = [{include = "daylio_migration"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
